break word on wrap to stop urls crashing screen

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -139,6 +139,10 @@ pre {
   margin-bottom: $gutter-half;
 }
 
+.copy-journal-message {
+  word-wrap: break-word;
+}
+
 .copy-journal-message .toggle-switch {
   display: none;
 }
